--- a/aplicacion/templates/editar_cita.html
+++ b/aplicacion/templates/editar_cita.html
@@ -1,10 +1,10 @@
-$def with (message, madres, lactantes, motivos, encargado)
+$def with (message, info_actual, motivos)
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vínculo de Vida - Registrar Cita</title>
+    <title>Vínculo de Vida - Editar Cita</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <style> body { font-family: ui-sans-serif, system-ui, sans-serif; } </style>
@@ -37,59 +37,25 @@ $def with (message, madres, lactantes, motivos, encargado)
         <!-- Contenido principal -->
         <main class="flex-grow flex flex-col items-center justify-center w-full px-4">
             <div class="bg-white rounded-2xl p-8 sm:p-12 shadow-lg max-w-4xl w-full">
-                <h2 class="text-2xl sm:text-3xl font-bold text-center mb-10 text-[#6a003f]">Registrar Nueva Cita</h2>
+                <h2 class="text-2xl sm:text-3xl font-bold text-center mb-10 text-[#6a003f]">Editar  Cita</h2>
                 
                 $if message:
                     <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4" role="alert">
                         <span>$message</span>
                     </div>
 
-                <form action="/registro_citas" method="POST" class="space-y-8">
-                    <!-- Sección de la Madre -->
-                    <!-- Scroll de madres registradas -->
+                <form action="/editar_cita/" method="POST" class="space-y-8">
+                    <div class="w-full max-w-3xl mx-auto mt-8">
+                        <label for="lactante" class="block text-xl font-bold text-[#6a003f] mb-2">Datos del lactante</label>
+                        <input id="lactante" name="lactante" type="text" placeholder="Lactante" value="$info_actual[2] $info_actual[3]"  readonly class="md:col-span-2 w-full p-3 border border-[#E4B4C5] rounded-md bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#E1A6CD]">
                     <div class="w-full max-w-3xl mx-auto mb-8">
-                        <label for="madre_select" class="block text-xl font-bold text-[#6a003f] mb-2">Selecciona una Madre Registrada</label>
-                        <select id="madre_select" name="id_madre" class="w-full p-3 border border-[#E4B4C5] rounded-md bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#E1A6CD]">
-                            <option value="" disabled selected>Selecciona una madre</option>
-                            $if madres:
-                                $for madre in madres:
-                                    <option value=$madre[0]>$madre[1] $madre[2] $madre[3]</option>
-                            $else:
-                                <option disabled>No hay madres registradas</option>
-                        </select>
-
-                    </div>
-
-                    <div class="text-center mt-6">
-
-                        <button type="submit" name="buscar" class="w-full sm:w-2/3 py-3 mt-6 bg-[#F8C9D9] text-[#6A003F] font-bold rounded-full shadow-md hover:bg-[#E4B4C5] transform hover:scale-105">
-                            Buscar Lactantes
-                        </button>
-                    </div>
-
-                    $if lactantes:
-                        <div class="w-full max-w-3xl mx-auto mt-8">
-                            <label for="lactante-select" class="block text-xl font-bold text-[#6a003f] mb-2">Seleccione un Lactante</label>
-                            <select id="lactante_select" name="id_lactante" required class="w-full p-3 border border-[#E4B4C5] rounded-md bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#E1A6CD]">
-                                <option value="" disabled selected>Selecciona un lactante</option>
-                                $for lactante in lactantes:
-                                    <option value=$lactante[0]>ID: $lactante[0] - $lactante[1] $lactante[2]</option>
-                            </select>
-                        </div>
-                        <div class="w-full max-w-3xl mx-auto mb-8">
-                            <label for="encargado" class="block text-xl font-bold text-[#6a003f] mb-2">Atendido por</label>
-                            <input id="atendido" name="atendido" type="text" placeholder="Nombre(s)" value="$encargado[0]" readonly class="md:col-span-2 w-full p-3 border border-[#E4B4C5] rounded-md bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#E1A6CD]">
-                        </div>
-                        <div class="w-full max-w-3xl mx-auto mb-8">
                             <label for="madre_select" class="block text-xl font-bold text-[#6a003f] mb-2">Motivo</label>
                             <select id="motiva_select" name="motivo" required class="w-full p-3 border border-[#E4B4C5] rounded-md bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#E1A6CD]">
                                 <option value="" disabled selected>Selecciona un motivo</option>
                                 $for motivo in motivos:
                                     <option value="$motivo[0]" class="">$motivo[1]</option>
                             </select>
-
                         </div>
-
                         <div class="w-full max-w-3xl mx-auto mb-8 grid grid-cols-1 md:grid-cols-2 gap-4">
                             <div>
                                 <label for="fecha_cita" class="block text-left font-bold mb-1 text-[#6a003f]">Fecha de la Cita (*)</label>
