--- a/aplicacion/templates/visualizacion_citas.html
+++ b/aplicacion/templates/visualizacion_citas.html
@@ -47,6 +47,7 @@ $def with (citas)
                                 <th class="py-3 px-4 border-b text-left text-[#6a003f] font-bold">Apellido Lactante</th>
                                 <th class="py-3 px-4 border-b text-left text-[#6a003f] font-bold">Motivo</th>
                                 <th class="py-3 px-4 border-b text-left text-[#6a003f] font-bold">Atendido Por</th>
+                                <th class="py-3 px-4 border-b text-left text-[#6a003f] font-bold">Acciones</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -57,6 +58,16 @@ $def with (citas)
                                     <td class="py-3 px-4 border-b">$cita['lactante_apellido']</td>
                                     <td class="py-3 px-4 border-b">$cita['motivo_nombre']</td>
                                     <td class="py-3 px-4 border-b">$cita['atendido_por']</td>
+                                    <td class="py-3 px-4 border-b">
+                                        <a href="/editar_cita/$cita['id_citas']" class="inline-block px-4 py-2 bg-[#E1A6CD] text-[#6a003f] font-semibold rounded-lg shadow hover:bg-[#d48fc2] transition-colors duration-200">
+                                            <i class="fas fa-edit mr-2"></i>Editar
+                                        </a>
+                                        <form action="/borrar_cita/$cita['id_citas']" method="post" style="display:inline;" onsubmit="return confirm('¿Estás seguro de que deseas borrar este usuario?');">
+                                            <button type="submit" class="inline-block px-4 py-2 bg-[#E1A6CD] text-[#6a003f] font-semibold rounded-lg shadow hover:bg-[#d48fc2] transition-colors duration-200 border border-[#E1A6CD] hover:border-[#d48fc2] focus:outline-none focus:ring-2 focus:ring-[#E1A6CD]">
+                                                <i class="fas fa-trash-alt mr-2"></i>Borrar
+                                            </button>
+                                        </form>
+                                    </td>
                                 </tr>
                         </tbody>
                     </table>
